# erpnext

./: .mergify.yml
.github/: POSTGRES_COMPATIBILITY.md
.github/helper/: hydrate.sh  install.sh  start-db.sh  sync_hotfix_translations.sh
.github/workflows/: server-tests-mariadb.yml  server-tests-postgres.yml  sync-hotfix-translations.yml
babyhouse_pos_bridge/: MANIFEST.in  pyproject.toml
babyhouse_pos_bridge/babyhouse_pos_bridge/: api.py  hooks.py  modules.txt  setup.py
babyhouse_pos_bridge/tests/: test_api.py
banking/: package.json  proxyOptions.ts
erpnext/: hooks.py  patches.txt
erpnext/accounts/: party.py  test_gl_characterization.py  utils.py
erpnext/controllers/: accounts_controller.py  buying_controller.py  item_variant.py  queries.py  selling_controller.py  stock_controller.py  subcontracting_controller.py  subcontracting_inward_controller.py  taxes_and_totals.py
erpnext/crm/: frappe_crm_api.py
erpnext/desktop_icon/: erpnext.json  erpnext_settings.json
erpnext/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hi.po  hr.po  hu.po  id.po  it.po  ko.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  th.po  tr.po  vi.po  zh.po
erpnext/setup/: install.py  utils.py
erpnext/startup/: __init__.py  boot.py
erpnext/stock/: deprecated_serial_batch.py  get_item_details.py  reorder_item.py  serial_batch_bundle.py
erpnext/templates/: utils.py
erpnext/workspace_sidebar/: erpnext_settings.json  manufacturing.json  organization.json
specs/: accounts_refactor_spec.md
(+231 files in other folders)
